# Lattice_AI

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  PRD.md  PRD_AutoScout.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  main.py
app/agents/: matcher.py  orchestrator.py  script_parser.py
app/agents/browser/: __init__.py  airbnb.py  browserbase.py  google.py
app/db/: __init__.py  client.py  models.py  queries.py  repository.py  schema.sql  supabase.py
app/grounding/: __init__.py  config.py  grounding_agent.py  models.py
app/memory/: __init__.py
app/models/: location.py
app/services/: llm_worker.py  pdf_parser.py  scene_extractor.py
app/utils/: logger.py
app/vapi/: __init__.py  call_context.py  config.py  extraction_schema.py  service.py  transcript_extractor.py
data/: demo_script.txt
scripts/: run_analysis.py
supabase/migrations/: 001_initial.sql
testing/: TESTING.md  __init__.py  sample_inputs.py  test_grounding.py  test_integration.py  test_pipeline.py  test_supabase.py  test_vapi.py
testing/output/: grounding_31121086-f429-4aa3-8ff3-57340627d0a5_20260124_224034.json  grounding_72c9f005-0957-422c-ab74-4fab7ebabff3_20260124_222106.json  grounding_b1f36e59-b17d-4d24-99b2-2575a8945a5c_20260124_221030.json  grounding_b975d49f-593c-4798-a197-d0bb41766a97_20260124_225639.json  grounding_c09f690e-81fc-49cf-86d0-2bdf0a4f2545_20260124_222931.json  grounding_c5ad589c-b2c0-409e-a7ba-d674bc124a0c_20260124_220751.json
web/: index.html  package.json  pnpm-lock.yaml
web/src/: App.tsx  middleware.ts
(+53 files in other folders)
