[project]
name = "location-scout"
version = "0.1.0"
description = "AI-powered location scouting for film production"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "supabase>=2.10.0",
    "google-genai>=1.0.0",
    "browserbase>=1.0.0",
    "playwright>=1.49.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.2.0",
    "structlog>=24.4.0",
    "pillow>=11.0.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
    "openai>=1.0.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
